--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,3 +1,4 @@
+cat <<'EOF' > buildspec.yml
 version: 0.2
 phases:
   install:
@@ -7,8 +8,11 @@ phases:
     commands:
       - echo "Packaging web files"
       - mkdir -p output
-      - cp -r index.html output/
+      # copy the files CodeDeploy needs into the artifact directory
+      - cp -r index.html appspec.yml scripts output/
 artifacts:
   files:
     - '**/*'
   base-directory: output
+EOF
+
